##
## This file is part of the sigrok project.
##
## Copyright (C) 2011 Uwe Hermann <uwe@hermann-uwe.de>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
##

if LA_CHRONOVU_LA8

# Local lib, this is NOT meant to be installed!
noinst_LTLIBRARIES = libsigrokhwchronovula8.la

libsigrokhwchronovula8_la_SOURCES = \
	chronovu-la8.c

libsigrokhwchronovula8_la_CFLAGS = \
	-I$(top_srcdir)/libsigrok

endif
