##
## This file is part of the libsigrok project.
##
## Copyright (C) 2013 Marcus Comstedt <marcus@mc.pp.se>
##
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
##

if HW_SALEAE_LOGIC16

# Local lib, this is NOT meant to be installed!
noinst_LTLIBRARIES = libsigrok_hw_saleae_logic16.la

libsigrok_hw_saleae_logic16_la_SOURCES = \
	api.c \
	protocol.c \
	protocol.h

libsigrok_hw_saleae_logic16_la_CFLAGS = \
	-I$(top_srcdir)

endif
